todo: server security maximum pendings as access-security
---------------------------------- 2023-12-07 09:29:03 23.12.7
no todo: server dhcp4 sdnXXX ---> server dhcp4 sdnXXX  inetXXX sdnZZZ as upgrade-cli <---maybe duplicate? :)
---------------------------------- 2023-12-07 17:30:54 23.12.7
no todo: server * vrf <tabbable> and upgrade-cli
no todo: same for upgrade-cli  <!-----------------------------------------------------------------------
no todo: upgrade-all-the-clis config knobs.... like server asdfadsf vrf asdf int sdn1111
---------------------------------- 2023-12-08 08:53:55 23.12.8
qc pass: dhcp with upgraded server
failed: dhcp with interface server
---------------------------------- 2023-12-10 10:00:35 23.12.10
no failed: dhcp with interface server
qc pass: dhcp with interface server
qc pass: unicast+mtree over bgp
qc pass: unicast+mtree over bgp with soft-reconfig
qc pass: unicast+mtree over bgp with additional path
qc pass: unicast+othermtree over bgp
qc pass: unicast+othermtree over bgp with soft-reconfig
qc pass: unicast+othermtree over bgp with additional path
---------------------------------- 2023-12-11 21:28:01 23.12.11
no todo: game butterfly hanoy, modem, mdev
---------------------------------- 2023-12-31 08:45:49 23.12.31
no todo: misc natives p4fwd to have more tests 4 packetout message with macsec/wg/ipsec/ovpn/etc too...
qc pass: p4lang: packout on macsec port
qc pass: p4lang: packout on macsec vlan port
---------------------------------- 2024-01-02 12:00:00 24.1.2
qc pass: p4lang: ipsec with packout
qc pass: p4lang: openvpn with packout
qc pass: p4lang: wireguard with packout
qc pass: p4lang: wireguard over vlan with packout
---------------------------------- 2024-01-03 14:33:51 24.1.3
no qc pass: p4lang: wireguard over vlan with packout
qc pass: p4lang: gre with packout
---------------------------------- 2024-01-08 13:21:54 24.1.8
no qc pass: dhcp with excluded address
failed: dhcp with excluded address