@@ -15689,3 +15689,6 @@ qc pass: p4lang: gre with packout
 ---------------------------------- 2024-01-08 13:21:54 24.1.8
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-01-08 14:10:34 24.1.8
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
